After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 423088 - Minor typo in source code has caused translators to mis-translate a menu item
Minor typo in source code has caused translators to mis-translate a menu item
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: process list
2.18.x
Other All
: Normal trivial
: ---
Assigned To: System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2007-03-26 21:04 UTC by Og Maciel
Modified: 2011-11-11 10:03 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18


Attachments
Minor tweak (602 bytes, patch)
2007-03-26 21:05 UTC, Og Maciel
none Details | Review
Add translator comment (559 bytes, patch)
2009-06-03 21:02 UTC, Claude Paroz
none Details | Review
Add translator comment to clarify 'open files' is no action. (956 bytes, patch)
2011-03-03 23:46 UTC, Chris Kühl
committed Details | Review

Description Og Maciel 2007-03-26 21:04:01 UTC
Please describe the problem:
The problem resides in the interfaces.cpp module, in the OpenFiles method/action.  The behavior for this method/action is to display a list of all the files that have been opened by a given process.  The caption should be changed from "Open Files" to "Opened Files".  Though this may seem to be minor in English, it causes mis-translations in other languages.

Steps to reproduce:
1. Open the System Monitor app;
2. Choose the Processes tab;
3. Right click on any process and choose "Open Files" from the context menu


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Og Maciel 2007-03-26 21:05:36 UTC
Created attachment 85348 [details] [review]
Minor tweak

If accepted we may consider change the method names as well, but that is not important.
Comment 2 Benoît Dejean 2007-03-26 22:21:19 UTC
LSOF(8)                                                                LSOF(8)

NAME
       lsof - list open files

I don't know.
Comment 3 Jared Moore 2008-01-25 06:30:17 UTC
"Open files" and "Opened files" mean practically the same thing, the difference being that "Open files" implies that the files are still open _right now_. What are the translation problems? Perhaps this could be best fixed with a translator comment?

(FWIW English is my native language)

Comment 4 Benoît Dejean 2008-01-25 11:05:36 UTC
This dialog is about files that are currently open by the selected process. For example, if you look at a text editor, it would probably show the files that you are editing.
Comment 5 Jared Moore 2008-02-02 09:51:30 UTC
Yeah, I know. What I'm saying is that "Open files" is more correct than "Opened files", so changing that string isn't a solution.
Comment 6 Claude Paroz 2009-06-03 21:02:40 UTC
Created attachment 135908 [details] [review]
Add translator comment

Instead of changing the string, add a translator comment.
Comment 7 Chris Kühl 2011-03-03 23:46:48 UTC
The following fix has been pushed:
2436bc9 Add translator comment to clarify 'open files' is no action.
Comment 8 Chris Kühl 2011-03-03 23:46:54 UTC
Created attachment 182423 [details] [review]
Add translator comment to clarify 'open files' is no action.