Add translator comment to clarify 'open files' is no action.

https://bugzilla.gnome.org/show_bug.cgi?id=423088